--- a/styles/default.css
+++ b/styles/default.css
@@ -1,30 +1,33 @@
 body {
   margin: 25px;
-  font-family: Helvetica, sans-serif;
+  font-family: "Comic Sans", Helvetica, sans-serif;
   font-size: 14px;
   color: black;
   background-color: rgb(240,240,240);
 }
 
-h1 {
-  color: black;
-  font-size: 35px;
-  font-weight: normal;
-  text-align: center
+div#header {
+  text-align:center;
+	border-bottom:3px solid black;
+	margin-bottom:50px;
+	padding:10px 2px 10px 2px;
 }
 
-h2 {
-  color: black;
-  font-size: 25px;
-  font-weight: normal;
-  text-align: center
+div#header#navigation {
+	color:black;
+	font-size:18px;
+	font-weight:bold;
+	margin-left:12px;
+  margin-right:12px;
+  text-align: center;
+	text-decoration:none;
+	text-transform:uppercase;
 }
 
-h3 {
+h1, h2, h3 {
   color: black;
-  font-size: 15px;
-  font-weight: normal;
-  text-align: center
+  text-align: center;
+  line-height: 1.2;
 }
 
 a:link {
