--- a/styles/default.css
+++ b/styles/default.css
@@ -1,40 +1,40 @@
 body {
   margin: 25px;
-  font-family: "Comic Sans", Helvetica, sans-serif;
+  font-family: "Comic Sans MS", Helvetica, sans-serif;
   font-size: 14px;
   color: black;
-  background-color: rgb(240,240,240);
+  text-decoration: none
 }
 
 div#header {
   text-align:center;
-	border-bottom:3px solid black;
-	margin-bottom:50px;
-	padding:10px 2px 10px 2px;
 }
 
 div#header#navigation {
-	color:black;
-	font-size:18px;
-	font-weight:bold;
-	margin-left:12px;
-  margin-right:12px;
+  font-size: 24px;
+  font-weight: bold;
   text-align: center;
-	text-decoration:none;
-	text-transform:uppercase;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 20px;
+  border-bottom: double;
+  margin: auto;
 }
 
-h1, h2, h3 {
-  color: black;
-  text-align: center;
-  line-height: 1.2;
+h1 {
+  font-size: 10vw;
 }
 
-a:link {
-  color: black;
+h2 {
+  font-size: 6vw;
 }
-a:visited {
-  color: purple;
+
+h3 {
+  font-size: 4vw;
+}
+
+ul.a {
+    list-style-type: circle;
 }
 
 /* Applies to all elements with <... class="someclass"> specified. */
