--- a/styles/default.css
+++ b/styles/default.css
@@ -1,40 +1,43 @@
 body {
-  margin: 25px;
+  margin: 100px 250px;
   font-family: "Comic Sans MS", Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: black;
   text-decoration: none
 }
 
 div#header {
   text-align:center;
-}
-
-div#header#navigation {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  padding: 20px;
-  border-bottom: double;
+  border: double;
   margin: auto;
 }
 
 h1 {
-  font-size: 10vw;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 32px;
+  text-align: center;
 }
 
 h2 {
-  font-size: 6vw;
+  font-size: 20px;
+  text-align: left;
+
 }
 
 h3 {
-  font-size: 4vw;
+  font-size: 18px;
 }
 
 ul.a {
     list-style-type: circle;
+    font-size: 16px;
+    font-weight: normal;
 }
 
 /* Applies to all elements with <... class="someclass"> specified. */
