--- a/styles/default.css
+++ b/styles/default.css
@@ -1,8 +1,9 @@
 body {
-  margin: 25px;
-  font-family: "Comic Sans MS", Helvetica, sans-serif;
-  font-size: 14px;
-  color: black;
+  margin: 15px;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  color: white;
+  background-color: black
   text-decoration: none
 }
 
@@ -11,7 +12,7 @@ div#header {
 }
 
 div#header#navigation {
-  font-size: 24px;
+  font-size: 48px;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
@@ -22,19 +23,22 @@ div#header#navigation {
 }
 
 h1 {
-  font-size: 10vw;
+  font-size: 32px;
+  text-decoration: underline;
 }
 
 h2 {
-  font-size: 6vw;
+  font-size: 24px;
 }
 
 h3 {
-  font-size: 4vw;
+  font-size: 18px;
 }
 
 ul.a {
     list-style-type: circle;
+    font-size: 16px;
+    font-weight: normal;
 }
 
 /* Applies to all elements with <... class="someclass"> specified. */
