--- a/styles/default.css
+++ b/styles/default.css
@@ -16,6 +16,7 @@ div#header {
   position: absolute;
   height: 75px;
   width: 100%;
+  min-width: 1050px;
   background-color: var(--garnet);
   text-align:center;
   border: 8px double var(--golden);
